--- a/src/app/components/agregar-editar-producto/agregar-editar-producto.component.scss
+++ b/src/app/components/agregar-editar-producto/agregar-editar-producto.component.scss
@@ -1,9 +1,13 @@
 form{
     display: grid;
+	padding-top: 10px;
 	grid-template-rows: repeat(3, 1fr);
 	grid-template-columns: repeat(2, 1fr);
 	gap: 10px 15px;
 	width: 100%;
 	height: 100%;
 
+}
+mat-label{
+	text-transform: capitalize;
 }
