--- a/src/app/components/base-table/base-table.component.html
+++ b/src/app/components/base-table/base-table.component.html
@@ -18,6 +18,8 @@
             <td mat-cell *matCellDef="let item">
                 @if (getValueFunctions[column]) {
                     {{ getValueFunctions[column](item)}}
+                }@else if(column === 'fecha'){
+                    {{ item[column] | date:'dd/MM/yyyy' }}
                 }@else {
                     {{ item[column] }}
                 }
